(6) Add STAPLE segmentation (vbm_tst_staple_multilabels).
(7) Update quality measures.
------------------------------------------------------------------------
r496 | dahnke | 2013-09-16 17:54:33

M       CHANGES.txt
 M      templates_1.50mm
A       vbm_check.m
A       vbm_db.m
A       vbm_db_batch.m
 M      vbm_io_cgw2seg.m
MM      vbm_io_csv.m
A       vbm_io_mysql.m
 M      vbm_io_remat.m
MM      vbm_io_seg2cgw.m
 M      vbm_tst_SRS.m
MM      vbm_tst_pre.m
 M      vbm_tst_staple_multilabels.m
A       vbm_tst_t1qa.m
MM      vbm_vol_average.m
MM      vbm_vol_sanlm.m

(1) Add VBM database development files (vbm_db_batch, vbm_db, vbm_io_mysql).
(2) Add QM estimation (vbm_tst_t1qa).
------------------------------------------------------------------------
r497 | dahnke | 2013-09-18 13:06:08

M       Makefile.vbm
M       cg_vbm_run.m
M       CHANGES.txt
M       cg_vbm_write.m

(1) Variable Fn in cg_vbm_run.m was not available if "write only" option 
    was used.
(2) Dartel is deselected if nor normalized images need to be saved in 
    cg_vbm_write.m
------------------------------------------------------------------------
r498 | gaser | 2013-09-20 09:40:55

M       CHANGES.txt
M       cg_vbm_run.m
M       cg_vbm_write.m
M       compile.m


------------------------------------------------------------------------
r499 | dahnke | 2013-09-20 13:01:01

M       CHANGES.txt

(1) Force to write single typed data in vbm_vol_resize.m for 'dereducebrain'.
(2) Cleaned up some variables to save memory in cg_vbm_write.m.
------------------------------------------------------------------------
r500 | gaser | 2013-09-23 13:04:04

M       vbm_vol_resize.m
M       CHANGES.txt
M       cg_vbm_write.m

(1) Force to write single typed data in vbm_vol_resize.m for 'dereducebrain'.
(2) Cleaned up some variables to save memory in cg_vbm_write.m.
------------------------------------------------------------------------
r501 | gaser | 2013-09-23 14:56:32